# YOU_DID_THIS

./: .env.example  .gitignore  1.py  README.md  install.sh  pyproject.toml  tmp_test2.txt  variants.txt
bot_funtime/: .env.example  .gitignore  README.md  package-lock.json  package.json
bot_funtime/src/: auction-scanner.js  config.js  dashboard.js  financial-model.js  index.js  live-view.js  logger.js  mc-text.js  openai-report.js  runtime-state.js
mobile_app/: .env.example  App.tsx  app.json  eas.json  package-lock.json  package.json  tsconfig.json
scripts/: migrate_sqlite_to_postgres.py
src/telegram_rag_memory_bot/: __init__.py  __main__.py  bot.py  config.py  main.py  schemas.py  settings_bot.py
src/telegram_rag_memory_bot/application/: __init__.py  assistant_service.py  platform_service.py
src/telegram_rag_memory_bot/application/telegram/: __init__.py  service.py
src/telegram_rag_memory_bot/application/vk/: __init__.py  service.py
src/telegram_rag_memory_bot/domain/: __init__.py  models.py  ports.py
src/telegram_rag_memory_bot/infrastructure/: __init__.py
src/telegram_rag_memory_bot/infrastructure/http/: __init__.py  local_upload_server.py  public_web_server.py
src/telegram_rag_memory_bot/infrastructure/telegram/: __init__.py  menu_bot.py
src/telegram_rag_memory_bot/infrastructure/vk/: __init__.py  menu_bot.py
src/telegram_rag_memory_bot/services/: __init__.py  database.py  media_service.py  openai_service.py  rag_service.py
src/telegram_rag_memory_bot/utils/: __init__.py  dates.py  process_lock.py  security.py  text.py
