# ????: pyproject.toml
# ????????? ?????????? ???????, ???????????, ????????? ??????
# ? ????? ????? ??? ??????? Telegram/VK RAG-????.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-rag-memory-bot"
version = "0.1.0"
description = "Telegram bot with local RAG memory and multimodal indexing via OpenAI API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.17,<4.0",
  "aiohttp>=3.11,<4.0",
  "beautifulsoup4>=4.12,<5.0",
  "lxml>=5.3,<6.0",
  "numpy>=1.26,<3.0",
  "openai>=1.66,<2.0",
  "opencv-python-headless>=4.10,<5.0",
  "openpyxl>=3.1,<4.0",
  "Pillow>=10.4,<12.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "PyPDF>=5.1,<6.0",
  "python-docx>=1.1,<2.0",
  "python-dotenv>=1.0,<2.0",
  "python-pptx>=1.0,<2.0",
  "telethon>=1.37,<2.0",
  "vk-api>=11.10,<12.0",
]

[project.scripts]
telegram-rag-memory-bot = "telegram_rag_memory_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
